--- a/app/src/main/res/layout/widget_left_gift.xml
+++ b/app/src/main/res/layout/widget_left_gift.xml
@@ -50,24 +50,35 @@
                     />
 
             </LinearLayout>
-
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:text="送了一个校园之星"
-                android:textColor="#4d73ff" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:text="送了一个"
+                    android:textColor="#4d73ff" />
+                <TextView
+                    android:id="@+id/gift_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:text="校园之星"
+                    android:textColor="#4d73ff" />
+            </LinearLayout>
+
 
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/gift_image"
+            android:id="@+id/iv_gift_image"
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="15dp"
-            android:src="@drawable/gift_star" />
+            android:src="@drawable/gift_star"/>
     </LinearLayout>
 
     <TextView
